--- a/Responsive Design/IndexResponsive.css
+++ b/Responsive Design/IndexResponsive.css
@@ -12,6 +12,10 @@
         height: 7vh;
     }
 
+    .search-container {
+        display: none;
+    }
+
     .options-header .option {
         display: none;
     }
@@ -25,19 +29,59 @@
         display: flex;
         height: auto;
         flex-direction: column;
+        /* padding-bottom: 1rem; */
     }
 
     .container-backdrop-popular {
         height: 30vh;
     }
 
-    .card-popular-hero {
-        /* font-size: 0.7rem; */
-        /* padding: 0.5rem; */
-        height: 40vh;
-        grid-template-columns: 55% 45%;
+    .container-info-popular {
+        /* padding-bottom: 1rem; */
     }
-    main{
+
+    .format-container-info-popular {
+        padding-bottom: 1rem;
+        display: grid;
+        grid-template-columns: repeat(12, minmax(0, 1fr));
+        grid-auto-rows: 7rem;
+        grid-gap: 0.5rem;
+        position: relative;
+    }
+
+    .titles-popular{
+        margin: 0;
+        grid-row: 2/span 1;
+        grid-column: auto/span 12;
+        height: auto;
+    }
+
+    .poster-popular {
+        /* height: 20vh;
+        width: 10vw; */
+        height: 150%;
+        width: 200%;
+        grid-row: auto/span 1;
+        grid-column: auto/span 3;
+        margin-bottom: 0;
+    }
+
+    .play-button {
+        margin-top: 1rem;
+        height: 100%;
+        font-size: 5rem;
+        grid-column: 7/span 3;
+        margin-bottom: 0;
+    }
+
+    .container-invitation-filter{
+        display: flex;
+        flex-direction: column;
+        padding: 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    main {
         display: flex;
         flex-direction: column;
     }
