--- a/Responsive Design/IndexResponsive.css
+++ b/Responsive Design/IndexResponsive.css
@@ -54,12 +54,13 @@
         grid-row: 2/span 1;
         grid-column: auto/span 12;
         height: auto;
+        text-align: center;
     }
 
     .poster-popular {
         /* height: 20vh;
         width: 10vw; */
-        height: 150%;
+        height: 155%;
         width: 200%;
         grid-row: auto/span 1;
         grid-column: auto/span 3;
@@ -84,6 +85,17 @@
     main {
         display: flex;
         flex-direction: column;
+        margin: 2rem 2rem;
+    }
+    .peliTeatro{
+        height: 20vh;
+        width: auto !important;
+    }
+    .tituloTeatro{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
