--- a/Responsive Design/movieResponsive.css
+++ b/Responsive Design/movieResponsive.css
@@ -18,13 +18,50 @@
     }
 
     .headerContainer {
-        display: none !important;
+        display: none;
     }
 
     .container-movie-info{
         display: flex;
         flex-direction: column;
         height: auto;
+        margin: 2rem 3vw;
+        border-radius: 20px;
+    }
+    .posterPeli{
+        height: auto;
+    }
+    .poster{
+        height: 80%;
+        border-radius: 20px;
+    }
+
+    .genre{
+        width: auto;
+        display: inline-flex;
+        margin: 1rem 0.5rem 0.2rem 0.5rem;
+    }
+    .original-language-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+    .divisor-movieInfo{
+        display: flex;
+        flex-direction: column;
+    }
+    .scoreDiv{
+        margin: 1rem;
+    }
+    #scoreFace{
+        display: none;
+    }
+    .barInfo{
+        border-radius: 0 0 20px 20px;
+        padding: 1rem;
+        flex-direction: column;
+        gap: 0.5rem;
     }
 
     footer {
