--- a/Responsive Design/movieResponsive.css
+++ b/Responsive Design/movieResponsive.css
@@ -35,7 +35,7 @@
         height: 80%;
         border-radius: 20px;
     }
-
+    
     .genre{
         width: auto;
         display: inline-flex;
@@ -58,17 +58,19 @@
         display: none;
     }
     .barInfo{
+        align-items: flex-start;
+        justify-content: center;
+        text-align: start;
         border-radius: 0 0 20px 20px;
         padding: 1rem;
         flex-direction: column;
-        gap: 0.5rem;
+        gap: 0.7rem;
     }
-
-    footer {
+    footer{
         padding: 1rem;
     }
-
-    .info-footer {
+   
+    .info-footer{
         display: grid;
         grid-template-columns: repeat(6, minmax(0, 1fr));
         grid-auto-rows: 2.5rem;
@@ -78,22 +80,19 @@
         justify-content: center;
         text-align: center;
     }
-
-    .first-row-footer {
+    .first-row-footer{
         grid-row: 1/span 1;
         grid-column: auto/span 4;
     }
-
-    .second-row-footer {
+    .second-row-footer{
         grid-row: 2/span 1;
         grid-column: 2/span 4;
-        text-align: center;
+        text-align: center; 
         display: flex;
         align-items: center;
         justify-content: center;
     }
-
-    .third-row-footer {
+    .third-row-footer{
         grid-row: 1/span 1;
         grid-column: 5/span 2;
     }
