--- a/Responsive Design/IndexResponsive.css
+++ b/Responsive Design/IndexResponsive.css
@@ -148,4 +148,128 @@
 }
 
 /* Media query para pantallas más grandes, como tablets */
-@media only screen and (max-width: 768px) {}
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+    header {
+        height: auto;
+        /* margin-bottom: 1rem; */
+    }
+
+    .header-bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 7vh;
+    }
+
+    .search-container {
+        /* display: none; */
+        width: 45%;
+    }
+
+    .options-header .option {
+        display: none;
+    }
+
+    .more-popular-hero {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .container-principal-popular {
+        display: flex;
+        height: auto;
+        flex-direction: column;
+        /* padding-bottom: 1rem; */
+    }
+
+    .container-backdrop-popular {
+        height: 35vh;
+    }
+
+    .format-container-info-popular {
+        /* padding-bottom: 1rem; */
+        display: grid;
+        grid-template-columns: repeat(12, minmax(0, 1fr));
+        grid-auto-rows: 7rem;
+        grid-gap: 0.5rem;
+        position: relative;
+    }
+
+    .titles-popular{
+        margin: 0;
+        grid-row: 2/span 1;
+        grid-column: auto/span 12;
+        height: auto;
+        text-align: center;
+    }
+
+    .poster-popular {
+        height: 250%;
+        width: 150%;
+        grid-row: auto/span 1;
+        grid-column: auto/span 3;
+        margin-bottom: 0;
+    }
+
+    .play-button {
+        margin-top: 1rem;
+        height: 100%;
+        font-size: 5rem;
+        grid-column: 5/span 3;
+        margin-bottom: 0;
+    }
+
+    .container-invitation-filter{
+        margin-top: 1rem;
+        display: flex;
+        flex-direction: column;
+        padding: 1.5rem;
+        font-size: 1.5rem;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 2rem;
+    }
+    .peliTeatro{
+        height: 20vh;
+        width: auto !important;
+    }
+    .tituloTeatro{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .header-section-pelis{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contenedor{
+        padding: 0;
+        gap: 0.8rem;
+    }
+
+    .pelicula{
+        height: 25vh;
+        width: 25vw;
+        padding: 0;
+    }
+    .poster{
+        width: 100% !important;
+    }
+    .posterRated{
+        height: 100% !important;
+        width: 100% !important;
+    }
+
+    footer{
+        height: auto !important;
+    }
+
+    .info-footer{
+        margin: 0;
+    }
+}
