--- a/Responsive Design/movieResponsive.css
+++ b/Responsive Design/movieResponsive.css
@@ -99,4 +99,104 @@
 }
 
 /* Media query para pantallas más grandes, como tablets */
-@media only screen and (max-width: 768px) {}
+@media only screen and (min-width: 500px) and (max-width: 768px) {
+    header {
+        height: 70vh !important;
+        width: 100%;
+        margin-bottom: 1rem;
+        margin: 0;
+        &::after {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 10vh;
+            /* Adjust height for fade-out length */
+            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), var(--background));
+        }
+    }
+
+    .headerContainer {
+        /* display: none; */
+        padding-bottom: 1rem;
+        /* font-size: 1rem; */
+    }
+
+    .frasePelicula, .container-go-bottom{
+        display: none;
+    }
+
+    .tituloPelicula{
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .container-movie-info{
+        /* display: flex;
+        flex-direction: column; */
+        height: auto;
+        margin: 2rem 3vw;
+        border-radius: 20px;
+    }
+    .posterPeli{
+        height: auto;
+    }
+    .poster{
+        height: 50%;
+        border-radius: 20px;
+        border-radius: 20px 0 20px 0;
+    }
+    
+    .genre{
+        width: auto;
+        display: inline-flex;
+        margin: 1rem 0.5rem 0.2rem 0.5rem;
+    }
+    .original-language-container{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 1rem;
+    }
+    .divisor-movieInfo{
+        display: flex;
+        flex-direction: column;
+    }
+    .container-score{
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .scoreDiv{
+        margin: -0.5rem 0 1rem;
+        width: 50%;
+        height: 10vh;
+        padding: 1rem;
+    }
+    #scoreFace{
+        display: none;
+    }
+    .barInfo{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        border-radius: 0 0 20px 20px;
+        padding: 1rem;
+        /* flex-direction: column; */
+        gap: 1rem;
+        margin-left: -42.5%;
+        font-size: 0.5em;
+    }
+    footer{
+        height: auto !important;
+    }
+
+    .info-footer{
+        margin: 0;
+    }
+}
